--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pwa-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://akovalevaristek.github.io/pwa/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
